# hh-ai-job-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  candidate_profile.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: capture_hh_session.py
src/hh_job_bot/: __init__.py  access.py  app.py  cards.py  config.py  cover_letter_validation.py  db.py  domain.py  healthcheck.py  hh_apply_service.py  hh_playwright.py  hh_web_client.py  notification_service.py  openrouter_client.py  prompts.py  repository.py  scoring_service.py  search_service.py
src/hh_job_bot/handlers/: __init__.py  catalog.py  common.py  generation.py  profiles.py
tests/: conftest.py  fakes.py  test_access.py  test_app_cycle.py  test_application_attempts.py  test_cards.py  test_catalog_handlers.py  test_config.py  test_container_config.py  test_cover_letter_validation.py  test_db.py  test_generation.py  test_healthcheck.py  test_hh_apply_service.py  test_hh_client.py  test_hh_playwright.py  test_notifications.py  test_openrouter_client.py  test_profile_handlers.py  test_project_config.py  test_prompts.py  test_repository.py  test_scoring_service.py  test_search_service.py
