[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-job-bot"
version = "0.1.0"
description = "Private Telegram bot for HH vacancy monitoring and AI-assisted replies"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram~=3.29.0",
    "httpx~=0.28.0",
    "pydantic-settings~=2.14.0",
    "SQLAlchemy~=2.0.51",
    "aiosqlite~=0.21.0",
    "APScheduler~=3.11.0",
    "tenacity~=9.1.0",
    "beautifulsoup4~=4.14.0",
    "playwright>=1.53,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.1,<2",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
